flex/flex-tests/testData/js2_highlighting/NoOverrideForInternal.js2
package <error descr="Package name 'bar' does not correspond to file path ''">bar</error> {
public class <lineMarker descr="Has subclasses"><error descr="Class 'ClassB' should be defined in file 'ClassB.js2'">ClassB</error></lineMarker> {
    function foo() {}
}
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'foo' does not correspond to file path ''">foo</error> {
import bar.ClassB;

public class <error descr="Class 'ClassA' should be defined in file 'ClassA.js2'">ClassA</error> extends ClassB {
    function foo() {}
    <lineMarker></lineMarker>function foo2() {}
}
}